--- a/views/Templates/footer.ejs
+++ b/views/Templates/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg-white">
+<footer class="bg-white" style="margin-bottom: -150;">
     <div class="container py-1" id="footer">
       <div class="row py-4">
         <div class="col-lg-5 col-md-5 mb-4 mb-lg-0" >
