--- a/views/Templates/profil.ejs
+++ b/views/Templates/profil.ejs
@@ -1,64 +1,82 @@
 <%- include ("header") %>
 
-    <body>
-        <div style="background: url(/carte.jpg)" class="page-holder bg-cover">
+	<body>
+		<div style="background: url(/carte.jpg)" class="page-holder bg-cover">
 
-            <div class="container">
-                <div class="row centered-form">
-                    <div
-                        class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
-                        <div class="shadow p-3 mb-5 bg-white">
-                            <div class="card ">
-                                <!-- <div class="card-header"> -->
-                                    <div class="text-center" style="margin-top: 10px;">
-                                        <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar"/>
-                                <!-- </div> -->
-                                <div class="text-center">
-                                    <%= firstname %> <%= lastname %>
-                                </div>
-                                <div>
-                                    <hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;"/>
-                                </div>
-                                <div class="card-block">
-                                    <form role="form">
-                                        <div class="form-group">
-                                            <input type="email" name="email" id="email"
-                                                class="form-control form-control-sm" placeholder="Email Address" value=<%= email %>>
-                                        </div>
+			<div class="container">
+				<div class="row centered-form">
+					<div
+						class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-6 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-3">
+						<div class="shadow p-3 mb-5 bg-white">
+							<div class="card ">
+								<!-- <div class="card-header"> -->
+								<div class="text-center" style="margin-top: 10px;">
+									<img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png"
+										class="avatar img-circle img-thumbnail" alt="avatar" />
+									<!-- </div> -->
+									<div class="text-center">
+										<%= firstname %>
+											<%= lastname %>
+									</div>
+									<div>
+										<hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;" />
+									</div>
+									<div class="card-block">
+										<form role="form">
+											<div class="form-group">
+												<input type="email" name="email" id="email"
+													class="form-control form-control-sm" placeholder="Email Address"
+													value=<%=email %>>
+											</div>
 
-                                        <div class="row">
-                                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                                <div class="form-group">
-                                                    <input type="password" name="new_password" id="new_password"
-                                                        class="form-control form-control-sm" placeholder="New Password">
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                                <div class="form-group">
-                                                    <input type="password" name="password_confirmation"
-                                                        id="password_confirmation" class="form-control form-control-sm"
-                                                        placeholder="Confirm Password">
-                                                </div>
-                                            </div>
-                                        </div>
+											<div class="row">
+												<div class="col-xs-6 col-sm-6 col-md-6">
+													<div class="form-group">
+														<input type="password" name="new_password" id="new_password"
+															class="form-control form-control-sm"
+															placeholder="New Password">
+													</div>
+												</div>
+												<div class="col-xs-6 col-sm-6 col-md-6">
+													<div class="form-group">
+														<input type="password" name="password_confirmation"
+															id="password_confirmation"
+															class="form-control form-control-sm"
+															placeholder="Confirm Password">
+													</div>
+												</div>
+											</div>
 
-                                        <input class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" type="submit"
-                                            value="Save">
+											<input class="btn btn-light btn-lg btn-block"
+												style="background-color: #8f1338;" type="submit" value="Save">
 
-                                    </form>
-                                </div>
-                                <div>
-                                  <hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;"/>
-                                </div>
-                                    <button class="btn btn-light btn-lg btn-block" style="background-color: #8f1338;" onclick="erase_history()">Erase History</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+										</form>
+									</div>
+									<div>
+										<hr style="height:1px;border:none;color:#8f1338;background-color:#8f1338;" />
+									</div>
+									<div class="card-block">
+										<div class="row">
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<button class="btn btn-light btn-lg btn-block"
+													style="background-color: #8f1338;"
+													onclick="erase_history()">Erase History</button>
+											</div>
+											<div class="col-xs-6 col-sm-6 col-md-6">
+												<button class="btn btn-light btn-lg btn-block"
+													style="background-color: #8f1338;"
+													onclick="deconnexion()">Log Out</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-            <script src="/views/script/profil.js"> </script>
-    </body>
+			<script src="/views/script/profil.js"> </script>
+	</body>
 
-    <%- include ("footer") %>
+	<%- include ("footer") %>
