--- a/views/Templates/accueil.ejs
+++ b/views/Templates/accueil.ejs
@@ -4,7 +4,7 @@
         <div class="container" id="search" >
             <div class="row centered-form" style="width:100 vw; height: 100vh; ">
                 <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4 offset-sm-1 offset-md-2 offset-lg-3 offset-xl-4">
-                    <div class="shadow p-3 mb-5 bg-white" style="margin-top: 25%;">
+                    <div class="shadow p-3 mb-5 bg-white">
 
                         <div class="card">
                                 <h3 class="card-header" style="background-color: transparent; color: #8f1338;">Où allez-vous ?</h3>
