--- a/views/Templates/profil.ejs
+++ b/views/Templates/profil.ejs
@@ -65,7 +65,7 @@
 											<div class="col-xs-6 col-sm-6 col-md-6">
 												<button class="btn btn-light btn-lg btn-block"
 													style="background-color: #8f1338;"
-													onclick="deconnexion()">Log Out</button>
+													onclick="logout()">Log Out</button>
 											</div>
 										</div>
 									</div>
