--- a/views/Templates/sign.ejs
+++ b/views/Templates/sign.ejs
@@ -62,11 +62,11 @@
                 <div class="card-block">
                     <div class="form-group">
                       <input type="email" name="email" id="user_email" class="form-control form-control-sm"
-                        placeholder="Email Address">
+                        placeholder="Email Address" required>
                     </div>
                     <div class="form-group">
                       <input type="password" name="password" id="user_password" class="form-control form-control-sm"
-                        placeholder="Password">
+                        placeholder="Password" required>
                     </div>
 
                     <button class="btn btn-light btn-lg btn-block" onclick="connexion()" style="background-color: #8f1338;"> Log in </button>
