--- a/views/Templates/profil.ejs
+++ b/views/Templates/profil.ejs
@@ -31,9 +31,9 @@
 											<div class="row">
 												<div class="col-xs-6 col-sm-6 col-md-6">
 													<div class="form-group">
-														<input type="password" name="new_password" id="password"
+														<input type="password" name="new_password" id="new_password"
 															class="form-control form-control-sm"
-															placeholder="Password" disabled>
+															placeholder="New Password" disabled>
 													</div>
 												</div>
 											</div>
